@@ -75,8 +75,8 @@ B<'Hailo_args'>, a hash reference containing arguments to pass to the
 constructor of a new L<Hailo|Hailo> object.
 
 B<'Channels'>, an array reference of channel names. If this is provided, the
-bot will only listen/respond the specified channels, rather than all
-channels (can be overridden with B<'Own_channel'>).
+bot will only listen/respond in the specified channels, rather than all
+channels.
 
 B<'Own_channel'>, a channel where it will reply to all messages. The plugin
 will take care of joining the channel. It will part from it when the plugin
